--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,12 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  color: white;
+}
+
+body {
+  background-image: url('../public/images/background.png');
+  background-size: cover;
 }
 
 .main {
@@ -21,7 +27,8 @@
   'home-projects home-projects home-projects home-projects home-projects'
   'home-projects home-projects home-projects home-projects home-projects'
   'home-projects home-projects home-projects home-projects home-projects'
-  'home-projects home-projects home-projects home-projects home-projects';
+  'home-projects home-projects home-projects home-projects home-projects'
+  'footer footer footer footer footer';
 }
 
 nav {
@@ -59,6 +66,26 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.title-greeting {
+  animation: title-fade-in 3s;
+}
+
+.subtitle {
+  animation: subtitle-fade-in 8s;
+}
+
+@keyframes title-fade-in {
+  0%    { opacity: 0; }
+  100%  { opacity: 1; }
+}
+
+@keyframes subtitle-fade-in {
+  0%    { opacity: 0; }
+  20%    { opacity: 0; }
+  40%    { opacity: 0; }
+  100%  { opacity: 1; }
 }
 
 .home-skills{
@@ -155,6 +182,14 @@ nav {
 
 .projects-invitation {
   margin-top: 1rem;
+  margin-bottom: 1rem;
   width: 80%;
   font-size: 1.2rem;
+}
+
+footer {
+  grid-area: footer;
+  margin-top: 3em;
+  margin-bottom: 2em;
+  text-align: center;
 }
