--- a/src/index.scss
+++ b/src/index.scss
@@ -43,11 +43,21 @@ nav {
   .navbar-text {
     display: flex;
     gap: 4rem;
+    animation: subtitle-fade-in 14s;
   }
   .navbar-img {
     display: flex;
     gap: 5rem;
-    animation: navbar-img-bounce 4s;
+
+    #first-nav-img{
+      animation: navbar-img-bounce 10s;
+    }
+    #sec-nav-img{
+      animation: navbar-img-bounce 12s;
+    }
+    #thrd-nav-img{
+      animation: navbar-img-bounce 14s;
+    }
   }
   button {
     background-color: transparent;
@@ -64,9 +74,9 @@ nav {
 @keyframes navbar-img-bounce {
   0% { transform: translateY(-20em) }
   1% { transform: translateY(-20em) }
-  50%, 80%, 100% { transform: translateY(0); } 
-  70% { transform: translateY(-30px); } 
-  90% { transform: translateY(-15px); } 
+  50% {transform: translateY(-20em) }
+  60%, 80%, 100% { transform: translateY(0); } 
+  70% { transform: translateY(-1em); } 
 }
 
 .title{
@@ -103,6 +113,10 @@ nav {
   flex-direction: column;
   align-items: center;
   margin-top: 1rem;
+
+  h1 {
+    animation: subtitle-fade-in 18s;
+  }
 }
 
 .home-skills > p {
