--- a/src/index.scss
+++ b/src/index.scss
@@ -5,13 +5,21 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
-  color: white;
+  color: #0f0f0f;
 }
 
 body {
-  background-image: url('../public/images/background.png');
-  background-size: cover;
+  // background-image: url('../public/images/new-background.png');
+  // background-size: cover;
+  // background-position: center;
+  background-color: #EAD94C;
 }
+
+// colour candidates + for abstract shapes for background
+// 347FC4 steel blue, F9CFF2 mimi pink, F2545B indian red, A5C4D4 columbia blue, 
+// #F4D06F jasmine, 
+
+// best candidates: #EAD94C, #F4D06F, 
 
 .main {
   display: grid;
@@ -76,7 +84,6 @@ nav {
   1% { transform: translateY(-20em); }
   50% {transform: translateY(-20em); }
   60%, 80%, 100% { transform: translateY(0); } 
-  70% { transform: translateY(-1em); } 
 }
 
 .title{
@@ -139,6 +146,7 @@ nav {
   align-items: center;
   margin-top: 1rem;
   padding: 0.5em;
+  border: 1px solid #373737;
   border-radius: 1em;
   width: 60%;
   font-weight: 500;
@@ -148,7 +156,7 @@ nav {
   }
 
   img {
-    height: 1.5rem;
+    height: 1.2rem;
   }
 }
 
@@ -202,6 +210,7 @@ nav {
   flex-direction: column;
   align-items: center;
   margin-top: 1rem;
+  animation: skills-fade-in 30s;
 
   .projects-subtitle {
     margin-top: 2.5rem;
@@ -235,6 +244,7 @@ nav {
 }
 
 footer {
+  animation: skills-fade-in 30s;
   grid-area: footer;
   margin-top: 3em;
   margin-bottom: 2em;
