--- a/src/aboutme.scss
+++ b/src/aboutme.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+.about-me {
+    display: flex;
+    flex-direction: column;
+}
+
 .about-header {
     font-size: 2.5rem;
     text-align: center;
@@ -8,4 +13,19 @@
 .about-desc {
     text-align: center;
     margin: 0 2rem;
+}
+
+@media (min-width: 700px) {
+  .about-header {
+    font-size: 6rem;
+  }
+
+  .about-desc {
+    margin-top: 2rem;
+    padding: 0 10rem;
+    font-size: 1.4rem;
+  }
+
+  footer {
+  }
 }
