--- a/src/projects.scss
+++ b/src/projects.scss
@@ -1,3 +1,9 @@
+.projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .projects-header {
     text-align: center;
     font-size: 1.7rem;
