--- a/src/projects.scss
+++ b/src/projects.scss
@@ -7,7 +7,7 @@
 .projects-header {
     text-align: center;
     font-size: 1.7rem;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
     margin-bottom: 1.2rem;
 }
 
@@ -27,6 +27,10 @@
     div {
         margin: 1rem;
     }
+}
+
+.project-group>p:hover {
+    cursor: pointer;
 }
 
 .hidden-project-group {
