--- a/src/projects.scss
+++ b/src/projects.scss
@@ -44,6 +44,7 @@
     display: flex;
     gap: 1rem;
     flex-direction: column;
+    width: 100%;
    
     .project-title {
         font-size: 1.5rem;
@@ -66,6 +67,7 @@
     margin: 0 2rem;
     border: 1px solid black;
     border-radius: 1rem;
+    width: 100%;
     
     .project-title {
         font-size: 1.5rem;
