Fix jittery animations

--- a/src/projects.scss
+++ b/src/projects.scss
@@ -35,16 +35,16 @@
 
 .hidden-project-group {
     overflow: hidden;
-    transition: margin 0.5s ease-out, border 0.5s ease-out, max-height 0.5s ease-out;
+    transition: border 0.5s ease-out, max-height 0.5s ease-out;
     max-height: 0;
-    margin: 0 2rem;
-    padding: 0em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
     border: 0px solid black;
     border-radius: 1rem;
-    display: flex;
-    gap: 1rem;
-    flex-direction: column;
-    width: 100%;
+    width: 80%;
+
    
     .project-title {
         font-size: 1.5rem;
@@ -64,10 +64,9 @@
     gap: 1rem;
     flex-direction: column;
     align-items: center;
-    margin: 0 2rem;
     border: 1px solid black;
     border-radius: 1rem;
-    width: 100%;
+    width: 80%;
     
     .project-title {
         font-size: 1.5rem;
