--- a/src/aboutme.scss
+++ b/src/aboutme.scss
@@ -16,6 +16,25 @@
     margin: 0 2rem;
 }
 
+.about-skills {
+  margin: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2em;
+
+  div {
+    width: 70%;
+  }
+}
+
+ul {
+  width: 100;
+}
+
+li {
+}
+
 @media (min-width: 700px) {
   .about-header {
     font-size: 6rem;
@@ -25,8 +44,5 @@
     margin-top: 2rem;
     padding: 0 10rem;
     font-size: 1.4rem;
-  }
-
-  footer {
   }
 }
