--- a/src/aboutme.scss
+++ b/src/aboutme.scss
@@ -14,6 +14,8 @@
 .about-desc {
     text-align: center;
     margin: 0 2rem;
+    margin-top: 0.5em;
+    font-size: 1.1rem;
 }
 
 .about-skills {
@@ -30,9 +32,10 @@
 
 ul {
   width: 100;
-}
 
-li {
+  li {
+    font-size: 1.2rem;
+  }
 }
 
 @media (min-width: 700px) {
