--- a/src/projects.scss
+++ b/src/projects.scss
@@ -71,6 +71,7 @@
     .project-title {
         font-size: 1.5rem;
         text-decoration: underline;
+        margin-bottom: 0.2rem;
     }
 
     .project-desc {
