--- a/src/index.scss
+++ b/src/index.scss
@@ -271,6 +271,10 @@ nav {
   align-items: center;
 }
 
+.home-projects-footer-fade-in {
+  animation: skills-fade-in 26s;
+}
+
 footer {
   grid-area: footer;
   margin-top: 3em;
