--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
   color: #0f0f0f;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -50,11 +51,14 @@ nav {
     text-decoration: none;
     border-style: none;
     font-size: 1.25rem;    
-  }
-  a {
+    
     img {
       height: 2.5rem;
     }
+  }
+  button {
+    background-color: transparent;
+    border: none;
   }
 }
 
@@ -102,8 +106,9 @@ nav {
 }
 
 .subtitle {
-  width: 70%;
   font-size: 1.5rem;
+  padding: 0 2rem;
+  text-align: center;
 }
 
 .subtitle-fade-in {
@@ -293,6 +298,61 @@ footer {
   animation: skills-fade-in 26s;
 }
 
+.contact-form {
+  padding: 1rem;
+  margin-top: 1rem;
+
+  h3 {
+    padding: 0 1rem;
+    margin-bottom: 1rem !important;
+    text-align: center;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    padding: 0 2.5rem;
+    margin-top: 0.5rem;
+    gap: 0.4rem;
+
+    input {
+      width: 70%;
+      border: 1px solid black;
+      border-radius: 1em;
+      padding: 1rem;
+      font-size: 1.2rem;
+    }
+    
+    textarea {
+      border: 1px solid black;
+      border-radius: 1em;
+      height: 10rem;
+      margin-bottom: 1rem;
+      padding: 1rem;
+      font-size: 1.2rem;
+    }
+
+    input[type='submit'] {
+      width: 30%;
+    }
+
+    input[type='submit']:hover {
+      width: 30%;
+      background-color: rgb(221, 221, 221);
+    }
+
+    input[type='submit']:active {
+      width: 30%;
+      background-color: rgb(221, 221, 221);
+    }
+  }
+}
+
+.emailResult {
+  margin-top: 1.5rem;
+  font-size: 1.2rem;
+}
+
 @media (min-width: 700px) {
 
   .title-greeting {
@@ -342,6 +402,35 @@ footer {
     }
   }
 
+  @keyframes subtitle-left-center {
+    0% { transform: translateX(-50em); opacity: 0; }
+    70% { transform: translateX(-50em); opacity: 0; }
+    100% { transform: translatex(0em); opacity:1; }
+  }
+
+  .title {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 'greeting greeting greeting'
+                          '. subtitle subtitle';
+    padding: 3rem 0;
+    height: 50vh;
+
+    .title-greeting {
+      font-size: 7rem;
+      width: fit-content;
+      margin: 2rem 0;
+      grid-area: greeting;
+      width: 60%;
+    }
+    .subtitle {
+      animation-timing-function: linear;
+      grid-area: subtitle;
+      font-size: 2rem;
+    }
+  }
+
   .home-skill > p {
     font-size: 2rem;
   }
@@ -349,12 +438,6 @@ footer {
   .home-skill > img {
     height: 2rem;
     width: 2rem;
-  }
-
-  .title-greeting {
-    font-size: 7rem;
-    width: fit-content;
-    margin: 2rem 0;
   }
 
   .home-skills-projects {
@@ -413,5 +496,19 @@ footer {
 
   .home-projects-footer {
     margin-top: 2.5rem;
+  }
+
+  .projects-invitation {
+    text-align: left;
+  }
+
+  form {
+    input {
+      font-size: 1.5rem;
+    }
+
+    textarea {
+      font-size: 1.8rem;
+    }
   }
 }
