--- a/src/aboutme.scss
+++ b/src/aboutme.scss
@@ -3,6 +3,7 @@
 .about-me {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .about-header {
@@ -12,7 +13,6 @@
 }
 
 .about-desc {
-    text-align: center;
     margin: 0 2rem;
     margin-top: 0.5em;
     font-size: 1.1rem;
@@ -47,5 +47,6 @@ ul {
     margin-top: 2rem;
     padding: 0 10rem;
     font-size: 1.4rem;
+    width: 60vw;
   }
 }
