--- a/src/projects.scss
+++ b/src/projects.scss
@@ -49,6 +49,7 @@
     .project-title {
         font-size: 1.5rem;
         text-decoration: underline;
+        margin-bottom: 0.2rem;
     }
 
     .project-desc {
@@ -76,10 +77,11 @@
 
     .project-desc {
         font-size: 1.2rem;
+        height: fit-content;
     }
 }
 
 .project-info {
     margin: 1rem 2rem;
-    font-size: 1.2rem
+    font-size: 1.2rem;
 }
