Add photo and change aboutme desc

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: #FBFAF5;
+  background-color: #fcfcfc;
 }
 
 .main {
@@ -29,6 +29,9 @@ nav {
   gap: 1rem;
   padding: 0.5rem;
   margin-top: 1em;
+  position: fixed;
+  top: 0;
+  width: 100%;
   .navbar-text {
     display: flex;
     gap: 4rem;
@@ -78,11 +81,12 @@ nav {
 
 .title{
   grid-area: title;
-  gap: 0rem;
+  gap: 0.7rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 8rem;
 }
 
 .title-greeting {
