--- a/src/aboutme.scss
+++ b/src/aboutme.scss
@@ -6,10 +6,18 @@
     align-items: center;
 }
 
+.profile-photo {
+  border-radius: 50%;
+  width: 8rem;
+  height: 8rem;
+  margin-top: 8rem;
+}
+
 .about-header {
     font-size: 2.5rem;
     text-align: center;
     margin-top: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .about-desc {
@@ -48,5 +56,11 @@ ul {
     padding: 0 10rem;
     font-size: 1.4rem;
     width: 60vw;
+  }
+
+  .profile-photo {
+    width: 15rem;
+    height: 15rem;
+    margin-top: 14rem;
   }
 }
