Lighten home skills and change react.svg

--- a/src/index.scss
+++ b/src/index.scss
@@ -180,23 +180,23 @@ nav {
 }
 
 .react {
-  background-color: #c4c4c4;
+  background-color: #e6e6e6;
 }
 
 .javascript {
-  background-color: #c4c4c4;
+  background-color: #e6e6e6;
 }
 
 .sass {
-  background-color: #c4c4c4
+  background-color: #e6e6e6
 }
 
 .api {
-  background-color: #c4c4c4;
+  background-color: #e6e6e6;
 }
 
 .testing {
-  background-color: #c4c4c4;
+  background-color: #e6e6e6;
 }
 
 .left-center-react {
