--- a/src/projects.scss
+++ b/src/projects.scss
@@ -7,7 +7,7 @@
 .projects-header {
     text-align: center;
     font-size: 1.7rem;
-    margin-top: 1.5rem;
+    margin-top: 8rem;
     margin-bottom: 1.2rem;
 }
 
@@ -84,4 +84,10 @@
 .project-info {
     margin: 1rem 2rem;
     font-size: 1.2rem;
+}
+
+@media (min-width: 1200px) {
+    .projects-header {
+        margin-top: 14rem;
+    }
 }
