--- a/src/index.scss
+++ b/src/index.scss
@@ -32,7 +32,7 @@ nav {
   padding-bottom: 1rem;
   top: 0;
   width: 100%;
-  background-color: #0f0f0f;
+  background-color: #242323;
   color: #fcfcfc;
   z-index: 1;
 
