Change nav link width

--- a/src/index.scss
+++ b/src/index.scss
@@ -51,6 +51,7 @@ nav {
     border-style: none;
     font-size: 1.25rem;
     color: #fcfcfc;
+    width: fit-content;
     img {
       height: 3rem;
     }
