Brighten body bg colour

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: #141414;
+  background-color: #1a1919;
 }
 
 .main {
@@ -170,7 +170,7 @@ nav {
 
   p {
     width: 15%;
-    // color: #fcfcfc !important;
+    color: #0f0f0f;
   }
 
   img {
