--- a/src/homeskillsprojects.scss
+++ b/src/homeskillsprojects.scss
@@ -100,6 +100,7 @@ margin-bottom: 3rem;
   grid-area: home-projects;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -108,6 +109,7 @@ margin-bottom: 3rem;
     font-size: 2rem;
     margin-bottom: 1rem;
     width: 80%;
+    text-align: center;
   }
 }
 
@@ -183,6 +185,7 @@ p {
   .home-projects {
     width: 50%;
     margin: 0 !important;
+    margin-top: 2rem !important; 
   }
 
   .blaze-slider {
