--- a/src/index.scss
+++ b/src/index.scss
@@ -66,7 +66,7 @@ body {
 
 .projects-invitation {
   margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
   width: 60%;
   font-size: 1.4rem;
 }
@@ -76,6 +76,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin-top: 1rem;
+  gap: 1.5rem;
 }
 
 .home-projects-footer-fade-in {
