Update home skills

--- a/src/homeskillsprojects.scss
+++ b/src/homeskillsprojects.scss
@@ -64,15 +64,15 @@ margin-bottom: 3rem;
   background-color: #e6e6e6;
 }
 
-.sass {
+.csharp {
   background-color: #e6e6e6
 }
 
-.api {
+.sql {
   background-color: #e6e6e6;
 }
 
-.testing {
+.express {
   background-color: #e6e6e6;
 }
 
@@ -84,7 +84,7 @@ margin-bottom: 3rem;
   animation: homeskill-left-center 8s
 }
 
-.left-center-sass {
+.left-center-csharp {
   animation: homeskill-left-center 9s
 }
 
@@ -92,7 +92,7 @@ margin-bottom: 3rem;
   animation: homeskill-left-center 10s
 }
 
-.left-center-testing {
+.left-center-express {
   animation: homeskill-left-center 11s
 }
 
