--- a/src/homeskillsprojects.scss
+++ b/src/homeskillsprojects.scss
@@ -88,7 +88,7 @@ margin-bottom: 3rem;
   animation: homeskill-left-center 9s
 }
 
-.left-center-api {
+.left-center-sql {
   animation: homeskill-left-center 10s
 }
 
